--- a/css/_header.scss
+++ b/css/_header.scss
@@ -19,6 +19,9 @@ header {
         h1{
             span{
                 @include fontPoint();
+                &:hover{
+                    color: $main-color;
+                }
             }
         }
         .pageMenu {
@@ -29,7 +32,9 @@ header {
                 position: relative;
                 &:hover{
                     span,button{
-                        @include fontWeightE();
+                        position: relative;
+                        @include txtBold();
+                        z-index: 5;
                     }
                     &:after{
                         position: absolute;
@@ -40,11 +45,18 @@ header {
                         height: 3rem;
                         background-color: $main-color;
                         transform: skew(-10deg);
-                        z-index: 5;
+                        z-index: 1;
                         opacity: 0.5;
                         animation: ani-width 0.2s ease-in-out 0s forwards;
                     }
                 }
+            }
+        }
+    }
+    &.white{
+        .center{
+            span,button{
+                color: $main-bg-txt;
             }
         }
     }
