--- a/css/_common.scss
+++ b/css/_common.scss
@@ -123,28 +123,12 @@ $main-bg-txt : #fff;
     }
 }
 //animation
-@keyframes ani-line {
-    0% {
-        height: 0;
-    }
-    100% {
-        height:100%;
-    }
-}
 @keyframes ani-width {
     0% {
         width:0%;
     }
     100% {
         width: 110%;
-    }
-}
-@keyframes ani-height {
-    0% {
-        height: 100%;
-    }
-    100% {
-        height:0%;
     }
 }
 @keyframes ani-textfill {
@@ -175,39 +159,20 @@ $main-bg-txt : #fff;
         text-indent: 0%;
     }
 }
-@keyframes ani-textindent2 {
+@keyframes ani-loop {
     0% {
-        transform: translateX(-100%);
-    }
-    100% {
         transform: translateX(0%);
     }
-}
-@keyframes ani-opacity {
-    0% {
-        opacity:0;
-    }
     100% {
-        opacity:1;
+        transform: translateX(100%);
     }
 }
-@keyframes ani-rotate {
+@keyframes ani-loop2 {
     0% {
-        transform:rotate(0deg);
+        transform: translateX(0%);
     }
     100% {
-        transform:rotate(360deg);
-    }
-}
-@keyframes ani-rotate2 {
-    0% {
-        transform: rotate(0deg);
-    }
-    50%{        
-        transform: rotate(15deg);
-    }
-    100% {
-        transform: rotate(0deg);
+        transform: translateX(-100%);
     }
 }
 @mixin fadeCont($ty:100%){    
@@ -239,38 +204,7 @@ $main-bg-txt : #fff;
         }
     }
     animation: #{$n} $s ease-in-out $d forwards;
-}
-@keyframes ani-fadeinout {
-    0% {
-        transform : translateY(50%);
-        opacity: 0;
-    }
-    30% {
-        transform : translateY(0%);
-        opacity: 1;
-    }
-    70%{
-        transform : translateY(0%);
-        opacity: 1;
-    }
-    100%{
-        transform : translateY(-50%);
-        opacity: 0;
-    }
-}
-
-@mixin anitop ($n,$s:1.5s,$d:0s,$t:0%,$t2:20%) {
-    @keyframes #{$n} {
-        0% {
-            top : $t;
-        }
-        100% {
-            top : $t2;
-        }
-    }
-    animation: #{$n} $s ease-in-out $d forwards;
-}
-                              
+}                              
 @keyframes cursor {
     0% { border-right: 2px solid transparent; }
     50% { border-right: 2px solid #fff; }
@@ -301,103 +235,17 @@ body{
     background-color: #fff;
     color: $main-txt;
 }
-.playBtn{
-    display: inline-block;
-    font-size: 4.8rem;
-    color: #fff;
-    @include txtBold();
-    vertical-align: middle;
-    &::after{
-        @include virtualIcon($w:4.8rem,$h:4.8rem){
-            margin:-0.5rem 0 0 2.5rem;
-            background-image: url('../images/btn_common_play.svg');  
-            vertical-align: middle; 
-         }
-         transition: all 0.3s;
-    }
-    &:hover{
-        &::after{
-            background-image: url('../images/btn_common_play_hover.svg');
-        }
-    }
-}
 .pc_br{
     display: block;
 }
 .mob_br{
     display: none;
 }
-.container{ 
-    position: relative;
-    @include fullvh();
-    overflow: hidden;
-    .pageWrap{
-        width: 100%;
-        @include fullvh();
-        transition-duration: 1.2s;
-            .page{                
-                position: relative;
-                width: 100%;
-                @include fullvh();
-                overflow: hidden;
-                .scrollBox{
-                    width: 100%;
-                    height: 100%;
-                    overflow-y: auto;               
-                    @include customScroll($w:0px);
-                }
-                .center{
-                    @include centerAlign();
-                }
-        }    
-    }
-}
-
-.progressBarBox{
-    position: relative;
-    height: 100%;
-    .progressBar{
-        position: sticky;
-        top: calc(50% - 16rem + 9rem);
-        left: calc(100% - 26rem);
-        display: inline-block;
-        width: 1rem;
-        z-index: 500;
-        &::before{
-            position: absolute;
-            left: 0;
-            bottom: calc(120% + 5.5rem);
-            display: block;
-            width: 20rem;
-            content: attr(data-progressname);
-            @include fontPoint();
-            transform: translate(-48.5%,  -50%) rotate(90deg);
-            text-align: right;
-            font-size: 1.6rem;
-        }
-        span{
-            position: relative;
-            display: block;
-            height: 32rem;
-            width: 0.1rem;
-            background-color: $main-txt;
-        }
-        i{
-            position: absolute;
-            display: block;
-            width: 100%;
-            height: 0%;
-            background-color: $main-color;
-        }
-    }
-}
-
 
 @media only screen and (min-width: 1920px){
     html,body{
         font-size: 10px;
     }
-
 }
 @media only screen and (max-width: 768px) {
     html,body{
@@ -405,9 +253,6 @@ body{
     }
     .center{
         @include centerMob($w:3rem);
-    }
-    .progressBarBox .progressBar{
-        //display: none;
     }
 }
 @media only screen and (max-width: 600px) {
