--- a/css/_header.scss
+++ b/css/_header.scss
@@ -79,7 +79,7 @@ footer {
     header {
         top: 3rem;
         .center {
-            span {
+            span,button {
                 font-size: 1.6rem;
             }
             .pageMenu{
