--- a/css/_main.scss
+++ b/css/_main.scss
@@ -52,14 +52,14 @@
             display: block;
             height: 32rem;
             width: 0.1rem;
-            background-color: $main-txt;
+            background-color: $main-color;
         }
         i{
             position: absolute;
             display: block;
             width: 100%;
             height: 0%;
-            background-color: $main-color;
+            background-color: $sub-color;
         }
     }
 }
@@ -194,8 +194,8 @@
                             left: 0;
                             display: inline-block;
                             max-width: 40%;
-                            border-top: 20px solid $gray-color;
-                            border-bottom: 10px solid $gray-color;
+                            border-top: 2rem solid $gray-color;
+                            border-bottom: 1rem solid $gray-color;
                             border-radius: 5px 5px 0 0;
                             box-shadow: 5px 5px 5px rgba(0,0,0,0.05);
                             overflow: hidden;
@@ -433,34 +433,105 @@
 
 
 @media only screen and (max-width: 768px) {
+    .progressBarBox{
+        .progressBar{    
+            top: 67%;
+            left: 50%;
+            transform: rotate(-90deg);
+            &::before{
+                display: none;
+            }
+            span{
+                width: 1rem;
+            }
+        }
+    }
     .main{
         .main01{
+            &::before{
+                background-size: auto 100%;
+            }        
             .scrollBox{
                 p{     
-                    @include centerPositionMob();
-                    top: 20%;      
-                    &::after{
-                        display: none;
-                    }        
+                    @include centerPositionMob($t:30%);
                     span{
-                        padding: 1rem 0 1rem 1.5rem;
-                        font-size: 5.5rem;
-                        line-height: 1.5;
-                        letter-spacing: -1.5px;
-                        &:nth-of-type(2){
-                            padding-left: 1.5rem;                            
-                            &::before{
-                                width: 2.3rem;
-                                left: -5%;
-                            }
-                        }
-                        &:nth-of-type(3){
-                            width: 71%;
-                        }
+                        font-size: 5rem;
+                        line-height: 1.25;
                     }
                 }
             }
 
+        }
+        .main02{
+            .animateRow{            
+                span{
+                    animation-duration: 10s !important;    
+                }
+            }
+            .center{
+                .animateFadeList{
+                    >li{
+                        .fadeCont{
+                            img{
+                                top: -10%;
+                                max-width: 80%;
+                            }
+                            .txtBox{
+                                top: 10%;
+                                width: 95%;
+                                height: 35rem;
+                                max-height: 48vh;
+                                padding: 4rem  1.5rem 3em 3rem;
+                                >div{
+                                    &:nth-of-type(1){
+                                        align-items: start;
+                                        flex-direction: column;
+                                        gap: 0;
+                                    }
+                                }
+                                h3{
+                                    font-size: 2.2rem;
+                                }
+                                p{
+                                    font-size: 1.3rem;
+                                }
+                                ul>li{
+                                    display: block;
+                                    margin: 0;
+                                    font-size: 1.3rem;
+                                    
+                                }
+                                .btnWrap{
+                                    top: 90%;
+                                    right: -1rem;
+                                    @include flex($j:center);
+                                    a{
+                                        width: 9.3rem;
+                                        height: 9.3rem;
+                                        font-size: 1.6rem;
+                                        margin: 0 -1rem 0 0;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+            }
+
+        }
+        .main03{
+
+        }
+        .main04{
+            &::before{
+                background-size: 10%; 
+            }
+            .center{
+                >div{
+                    font-size: 1.6rem;
+                }
+            }
         }
     }
 
